[workspace]
resolver = "2"
members = [
    "crates/quill-server",
    "crates/quill-config",
    "crates/quill-storage",
    "crates/quill-registry",
    "crates/quill-auth",
    "crates/quill-tls",
    "crates/quill-pullthrough",
    "crates/quill-upstream",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.85"
license = "Apache-2.0"
authors = ["Dilip Dalton"]
repository = "https://github.com/ddalton/quill"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["io"] }
futures = "0.3"
async-trait = "0.1"

# HTTP server
axum = { version = "0.7", features = ["macros"] }
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.5", features = ["trace"] }
http = "1"
http-body = "1"
http-body-util = "0.1"
bytes = "1"

# TLS
rustls = "0.23"
tokio-rustls = "0.26"
rustls-pemfile = "2"
rcgen = "0.13"

# Auth
bcrypt = "0.15"
jsonwebtoken = "9"

# Storage
dashmap = "6"
parking_lot = "0.12"

# Hashing
sha2 = "0.10"
hex = "0.4"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# OCI types
oci-spec = "0.7"

# Errors
thiserror = "1"
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# Concurrency primitives
arc-swap = "1"

# Upstream HTTP client
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "http2", "stream", "json"] }
url = "2"

# Quill internal crates
quill-config = { path = "crates/quill-config" }
quill-storage = { path = "crates/quill-storage" }
quill-registry = { path = "crates/quill-registry" }
quill-auth = { path = "crates/quill-auth" }
quill-tls = { path = "crates/quill-tls" }
quill-pullthrough = { path = "crates/quill-pullthrough" }
quill-upstream = { path = "crates/quill-upstream" }

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "symbols"
