[package]
name = "quill-registry"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
async-trait = { workspace = true }
axum = { workspace = true }
dashmap = { workspace = true }
bytes = { workspace = true }
chrono = { workspace = true }
futures = { workspace = true }
http = { workspace = true }
http-body-util = { workspace = true }
hyper = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tower = { workspace = true }
tracing = { workspace = true }

quill-storage = { workspace = true }
quill-pullthrough = { workspace = true }
quill-upstream = { workspace = true }
