[package]
name = "quill-server"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true

[[bin]]
name = "quill"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
axum = { workspace = true }
bytes = { workspace = true }
chrono = { workspace = true }
clap = { version = "4", features = ["derive"] }
hyper = { workspace = true }
hyper-util = { workspace = true }
parking_lot = { workspace = true }
rustls = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
tokio-rustls = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

quill-auth = { workspace = true }
quill-config = { workspace = true }
quill-pullthrough = { workspace = true }
quill-registry = { workspace = true }
quill-storage = { workspace = true }
quill-tls = { workspace = true }
quill-upstream = { workspace = true }

[dev-dependencies]
async-trait = { workspace = true }
bytes = { workspace = true }
dashmap = { workspace = true }
futures = { workspace = true }
http-body-util = { workspace = true }
hyper = { workspace = true }
quill-config = { workspace = true }
quill-pullthrough = { workspace = true }
quill-registry = { workspace = true }
quill-storage = { workspace = true }
quill-upstream = { workspace = true }
reqwest = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
tempfile = "3"
tokio = { workspace = true }
tower = { workspace = true }
